--- a/web/clase2Web/style/style.css
+++ b/web/clase2Web/style/style.css
@@ -51,3 +51,12 @@
 .img_subs > img{
   width: 30%;
 }
+
+.obras{
+  width: 80%;
+  margin: 1%;
+  padding: 2%;
+  border-style: groove;
+  border-radius: 10%;
+  border-color: brown;
+}
