--- a/web/tpFinalWeb/styles/style.css
+++ b/web/tpFinalWeb/styles/style.css
@@ -3,6 +3,13 @@
   padding: 0;
 }
 
+body{
+  background-color: rgb(247, 243, 189);
+}
+.productos{
+  background-color: rgb(247, 243, 189);
+}
+
 .banner{
   display: flex;
   flex-direction: column;
@@ -10,7 +17,7 @@
   font-size: 1.5rem;
   text-align: center;
   justify-content: center;
-  min-height: 40vh;
+  min-height: 30vh;
   background-image: url(/img/destacado-leer-libros-games-of-thrones.jpg);
   background-position: 50%;
 }
@@ -20,18 +27,23 @@
 }
 
 .cuerpo{
-  margin: 2%;
+  margin: 2% 2% 0% 2%;
   padding: 2%;
-  border: 2%;
+  border: 5%;
   border-radius: 10%;
-  border-style: double;
+  border-style: dotted;
   border-color: cadetblue;
+  background-color: rgb(247, 243, 189);
+}
+.cuerpo > p {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .banner_subtitulos{
   display: flex;
   flex-direction: row;
-  min-height: 30vh;
+  min-height: 20vh;
   align-items: center;
   justify-content: space-around;
 }
@@ -103,7 +115,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-left: 1%;
-  border-style: groove;
-  border-radius: 5%;
 }
+
+.modal-body{
+  background-color: rgb(247, 243, 189);
+}
+
+.modal-header{
+  color: wheat;
+  background-color: rgba(192, 110, 81, 0.767);
+}
+
